tests/snapshots/it_api__post_is_read__get_unread_count_after.snap
---
source: tests/it_api.rs
expression: response.json_entity()
---
[
  "200 OK",
  {
    "payload": {
      "all": 163,
      "categories": {
        "1": 83,
        "2": 80
      },
      "feeds": {
        "1": 29,
        "2": 4,
        "3": 50,
        "4": 20,
        "5": 10,
        "6": 10,
        "7": 10,
        "8": 20,
        "9": 10
      }
    },
    "status": "ok"
  }
]
