tests/snapshots/it_api__post_is_read__get_unread_count_before.snap
---
source: tests/it_api.rs
expression: response.json_entity()
---
[
  "200 OK",
  {
    "payload": {
      "all": 114,
      "categories": {
        "1": 84,
        "2": 30
      },
      "feeds": {
        "1": 30,
        "2": 4,
        "3": 50,
        "4": 20,
        "5": 10
      }
    },
    "status": "ok"
  }
]
